feat: 5-dimension machine-executable quality transform on all 105 skills
Five structural transforms applied to every skill file:

1. Dynamic Routing — Auto-Route tables with file_contains()/file_exists()
   conditions (A1-A8) + Intent Route fallback trees
2. Linter-Grade Anti-Patterns — 4-column tables with grep detection regex
   and auto-prevention configs per anti-pattern
3. Testable Checklists — validation commands (npx/curl/grep) and auto-fix
   paths for every checklist item
4. Active Error Traps — console-match grep patterns and numbered
   auto-recovery loops per error pattern
5. Negative Constraints — REFUSE/STOP/DETECT hard-gate rules with
   mechanical triggers and violation responses

All content is domain-specific per skill — no cross-domain copying.
7626 insertions, 5731 deletions across 105 files.

Signed-off-by: Sandeep Penchala <sandeep.penchala@gmail.com>